# AITD-Hackers

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_memory_record.py
backend/app/: config.py  hindsight.py  main.py  parsers.py  schemas.py  services.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AskMemory.tsx  KnowledgeGraph.tsx  UploadForm.tsx
