[tool.poetry]
name = "memoria-ai-backend"
version = "0.1.0"
description = "Backend for Memoria AI organizational memory system"
authors = ["Memoria AI"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.23.0"
pydantic = "^2.8.0"
sqlmodel = "^0.0.8"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
python-docx = "^0.8.12"
pypdf = "^4.11.0"
requests = "^2.31.0"
alembic = "^1.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
